--- a/package.json
+++ b/package.json
@@ -10,27 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.3.0",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/material-bottom-tabs": "^6.2.19",
-    "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/drawer": "6.6.6",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/stack": "6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.13.4",
-    "react-native-pager-view": "^6.2.2",
-    "react-native-paper": "^5.11.1",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-reanimated": "3.6.1",
+    "react-native-safe-area-context": "4.7.4",
+    "react-native-screens": "3.27.0",
+    "react-native-vector-icons": "10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
@@ -42,7 +38,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
