--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,93 @@
 {
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
+  "compilerOptions": {
+      "jsx": "react"
+  },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
